--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>springcloud-project-dept-80</module>
         <module>springcloud-eureka-7001</module>
         <module>springcloud-eureka-7002</module>
+        <module>springcloud-eureka-7004</module>
     </modules>
 
     <properties>
