--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,9 @@
         <module>springcloud-provider-dept-8001</module>
         <module>springcloud-project-dept-80</module>
         <module>springcloud-eureka-7001</module>
-        <module>springcloud-eureka-7002</module>
         <module>springcloud-eureka-7004</module>
+        <module>springboot-eureka-7002</module>
+        <module>springcloud-eureka-7005</module>
     </modules>
 
     <properties>
